@@ -1,2 +1,0 @@
-- problem when pressing keys up/down, etc
-- resize screen
